--- a/assets/css/styles-1.css
+++ b/assets/css/styles-1.css
@@ -9,7 +9,7 @@ body {
 
 body {
   font-family: "Source Sans Pro", Arial, sans-serif;
-  font-size: 16px;
+  font-size: 22px;
   color: #89949c;
   letter-spacing: 0.01em;
   overflow-x: hidden;
@@ -27,7 +27,7 @@ h6 {
 
 #main-content {
   position: relative;
-  background: #fff;
+  background: black;
   box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.2);
   z-index: 10;
 }
@@ -93,7 +93,7 @@ a:focus {
 }
 
 .row-title {
-  color: #39444c;
+  color: white;
   font-weight: 400;
 }
 
@@ -126,7 +126,7 @@ hr {
 --------------------*/
 
 .main-color {
-  color: #00cccb !important;
+  color: white !important;
 }
 
 .bg-main-color {
@@ -140,7 +140,7 @@ hr {
 }
 
 .gray-bg {
-  background: #fbfbfc;
+  background: black;
 }
 
 .white-bg {
@@ -380,7 +380,7 @@ hr {
 
 #home .header-img {
   position: absolute;
-  bottom: 0;
+  bottom: 10;
   left: 50%;
   width: 900px;
   margin-left: -450px;
@@ -427,7 +427,7 @@ hr {
 -------------------------*/
 
 .service-item {
-  margin: 30px 0;
+  margin: 20px 0;
   padding: 0 45px;
   text-align: center;
 }
@@ -438,6 +438,19 @@ hr {
 }
 
 .service-item .service-icon {
+  display: block;
+  margin: 0 auto 30px;
+  width: 180px;
+  height: 180px;
+  border: 1px solid #ddd;
+  color: #89949c;
+  border-radius: 50%;
+  overflow: hidden;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+.iconify {
   display: block;
   margin: 0 auto 30px;
   width: 180px;
@@ -466,6 +479,11 @@ hr {
 .service-item:hover .service-icon {
   color: #00cccb;
   border-color: transparent;
+}
+
+.iconify {
+  color: #00cccb;
+  border-color: solid;
 }
 
 .service-item h3 {
@@ -1737,7 +1755,7 @@ hr {
     margin-left: -380px;
   }
 
-  .service-item .service-icon {
+  .service-item .service-icon .iconify {
     width: 150px;
     height: 150px;
   }
@@ -1888,7 +1906,7 @@ hr {
   }
 
   #home .header-img {
-    width: 100%;
+    width: 59%;
     left: 0;
     margin-left: 0;
   }
