--- a/assets/css/styles-1.css
+++ b/assets/css/styles-1.css
@@ -22,7 +22,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #39444c;
+  color: white;
 }
 
 #main-content {
@@ -53,7 +53,7 @@ a:focus {
   margin-bottom: 30px;
   font-size: 28px;
   font-weight: 300;
-  color: #39444c;
+  color: white;
 }
 
 .big-padding {
@@ -71,7 +71,7 @@ a:focus {
   margin-top: 0;
   font-size: 62px;
   font-weight: 400;
-  color: #39444c;
+  color: white;
   text-align: center;
 }
 
@@ -214,11 +214,11 @@ hr {
 .btn-dc.btn-main-color,
 .btn-dc.btn-main-color:hover,
 .btn-dc.btn-main-color:focus {
-  color: #00cccb;
+  color: darkseagreen;
 }
 
 /*-----------------------
----- Preloader Styles ----
+---- #00cccb Preloader Styles ----
 -------------------------*/
 #page-loader {
   position: fixed;
@@ -316,7 +316,7 @@ hr {
 #site-nav a:focus {
   padding-top: 4px;
   padding-bottom: 10px;
-  color: #00cccb !important;
+  color: seagreen !important;
   background: none;
 }
 #site-nav a .fa {
@@ -367,7 +367,7 @@ hr {
   margin-bottom: 10px;
   font-size: 72px;
   font-weight: 400;
-  color: #39444c;
+  color: white;
 }
 
 #home h2 {
@@ -420,7 +420,7 @@ hr {
 .scroll-down a:hover {
   padding-top: 11px;
   padding-bottom: 9px;
-  color: #00cccb;
+  color: seagreen;
 }
 /*-----------------------
 ---- Services Styles ----
@@ -477,19 +477,19 @@ hr {
 }
 
 .service-item:hover .service-icon {
-  color: #00cccb;
+  color: seagreen;
   border-color: transparent;
 }
 
 .iconify {
-  color: #00cccb;
+  color: seagreen;
   border-color: solid;
 }
 
 .service-item h3 {
   font-size: 21px;
   font-weight: 400;
-  color: #39444c;
+  color: white;
 }
 
 .btn-group {
@@ -507,11 +507,11 @@ hr {
 }
 
 .btn-group .btn:hover {
-  color: #39444c;
+  color: white;
 }
 
 .btn-group .btn.active {
-  color: #00cccb;
+  color: seagreen;
   background: #fff;
   box-shadow: none;
 }
@@ -582,13 +582,13 @@ hr {
 #about .profile h2 {
   margin-top: 30px;
   margin-bottom: 5px;
-  color: #00cccb;
+  color: seagreen;
 }
 
 #about .profile h3 {
   margin: 0;
   font-size: 21px;
-  color: #39444c;
+  color: white;
 }
 
 .hover-wrapper {
@@ -726,7 +726,7 @@ hr {
 }
 
 #twitter-feeds a {
-  color: #39444c;
+  color: white;
   opacity: 0.7;
   -webkit-transition: opacity 0.15s ease-out;
   transition: opacity 0.15s ease-out;
@@ -961,7 +961,7 @@ hr {
   margin-top: 0;
   font-size: 52px;
   font-weight: 400;
-  color: #39444c;
+  color: white;
   text-align: center;
 }
 
@@ -1844,7 +1844,7 @@ hr {
   }
 
   .icon-bar {
-    background: #39444c;
+    background: white;
   }
 
   #main-nav .container,
