--- a/assets/css/styles-1.css
+++ b/assets/css/styles-1.css
@@ -455,7 +455,7 @@ hr {
   margin: 0 auto 30px;
   width: 180px;
   height: 180px;
-  border: 1px solid #ddd;
+  border: 1px solid black;
   color: #89949c;
   border-radius: 50%;
   overflow: hidden;
