--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -4554,3 +4554,11 @@ readers do not read off random characters that represent icons */
 .fas {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900; }
+
+  .box{
+    float:left;
+    margin-right:20px;
+}
+.clear{
+    clear:both;
+}
